@@ -8,10 +8,10 @@ gwt.sdk = /Users/juha/gwt/gwt-2.4.0
 #  - Minor version for compatible features
 #  - Last version for bug fixes
 #
-version = 2.11.2
+version = 2.11.3
 
 # Build date (use YYYY-MM-DD format)
-build.date = 2012-03-14
+build.date = 2012-03-25
 
 # Build Identifier (arbitrary string name to match major.minor version -- for convenience)
 version.name = Formosa
